--- a/cms/templates/cms/payment_success.html
+++ b/cms/templates/cms/payment_success.html
@@ -13,7 +13,7 @@
                 <hr class="my-4 border-stroke">
                 
                 <div class="d-flex justify-content-center">
-                    <a href="{% url 'cms:dashboard' %}" class="btn btn-primary btn-executive px-5 py-2">Enter Dashboard</a>
+                    <a href="{% url 'cms:dashboard' %}" class="btn btn-primary btn-executive px-5 py-2">Dashboard</a>
                 </div>
             </div>
         </div>
