--- a/cms/templates/cms/job_list.html
+++ b/cms/templates/cms/job_list.html
@@ -12,7 +12,7 @@
                     <h3 class="h5 fw-bold">{{ job.title }}</h3>
                     <p class="text-muted small">{{ job.location }} |{{ job.salary }}</p>
                     <p class="card-text">{{ job.summary }}</p>
-                    <a href="{% url 'cms:job_detail' job.pk %}" class="btn btn-outline-primary btn-sm mt-3">View Details</a>
+                    <a href="{% url 'cms:public_job_detail' job.pk %}" class="btn btn-outline-primary btn-sm mt-3">View Details</a>
                 </div>
             </div>
             {% empty %}
