--- a/cms/templates/cms/public_job_detail.html
+++ b/cms/templates/cms/public_job_detail.html
@@ -28,8 +28,7 @@
                             {{ job.description|linebreaks }}
                         </div>
                     </div>
-
-                    <div class="apply-container p-4 rounded bg-light mt-5">
+                        <div class="apply-container p-4 rounded bg-light mt-5">
                             <h4 class="fw-bold mb-3 text-center">Interested in this role?</h4>
                             <p class="mb-4 text-center text-muted small">Please provide your details below. All fields are optional.</p>
                             
@@ -46,7 +45,7 @@
                                         <input type="text" name="phone" class="form-control" placeholder="Phone Number">
                                     </div>
                                     <div class="col-md-6">
-                                        <input type="file" name="cv" class="form-control">
+                                        <input type="file" name="cv" class="form-control" accept=".pdf,.doc,.docx">
                                     </div>
                                     <div class="col-12 mt-4">
                                         <button type="submit" class="btn btn-primary btn-lg w-100">
