fix mistake on extending base html

--- a/cms/templates/cms/application_success.html
+++ b/cms/templates/cms/application_success.html
@@ -1,4 +1,6 @@
-{% extends "cms/base_cms.html" %}
+{% extends "cms/base_tenant.html" %}
+
+{% block title %}Application Received | {{ profile.display_name }}{% endblock %}
 
 {% block content %}
 <div class="container py-5 text-center">
