--- a/cms/templates/cms/public_job_detail.html
+++ b/cms/templates/cms/public_job_detail.html
@@ -36,7 +36,7 @@
                                 {% csrf_token %}
                                 <div class="row g-3">
                                     <div class="col-md-6">
-                                        <input type="text" name="full_name" class="form-control" placeholder="Full Name">
+                                        <input type="text" name="full_name" class="form-control" placeholder="Full Name" required>
                                     </div>
                                     <div class="col-md-6">
                                         <input type="email" name="email" class="form-control" placeholder="Email Address">
