--- a/cms/templates/cms/base_tenant.html
+++ b/cms/templates/cms/base_tenant.html
@@ -22,6 +22,7 @@
         }
     </style>
 </head>
+<body class="theme-{{ profile.template_choice|default:'executive' }}">
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="{% url 'cms:home' %}">
