--- a/cms/templates/cms/public_job_detail.html
+++ b/cms/templates/cms/public_job_detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ job.title }} | Careers{% endblock %}
 
 {% block content %}
-<div class="theme-{{ profile.template_choice|default:'executive' }} py-5">
+<div class="theme-{{ profile.template_choice|default:'executive' }} agency-site py-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
